--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "apollo-client": "^1.9.0-1",
     "babel-polyfill": "^6.23.0",
+    "bootstrap": "^4.1.2",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-beautify": "1.6.14",
